--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  min-height: 100%;
+}
+
 body,
 .btn {
   font-family: "Montserrat", sans-serif;
@@ -11,6 +15,13 @@ body,
 
 body {
   min-height: 100%;
+  position: relative;
+}
+
+body::after {
+  content: "";
+  height: 120px;
+  display: block;
 }
 
 .wrapper {
@@ -63,8 +74,28 @@ h2 {
   line-height: 47px;
 }
 
-.bg-image {
-  background-size: cover;
+.image-container {
   max-width: 100%;
-  max-height: calc(100vh - 140px);
+}
+
+.cat-image {
+  width: 100%;
+}
+
+footer {
+  text-align: center;
+  background-color: black;
+  color: white;
+  height: 120px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 30px 0px;
+  font-size: 18px;
+}
+
+@media (min-width: 768px) {
+  .image-container {
+    max-width: 50%;
+  }
 }
