--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,22 @@ html {
   min-height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 body,
 .btn {
   font-family: "Montserrat", sans-serif;
@@ -16,6 +32,8 @@ body,
 body {
   min-height: 100%;
   position: relative;
+  padding-top: 30px;
+  color: #292b2c;
 }
 
 body::after {
@@ -31,9 +49,9 @@ body::after {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 40px;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 section {
@@ -42,19 +60,18 @@ section {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 34px;
   margin-bottom: 20px;
 }
 
 .btn {
   padding: 10px 30px;
-  border: none;
-  background-color: black;
+  background-color: #292b2c;
   color: white;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 800;
   cursor: pointer;
-  border: 1px solid black;
+  border: 2px solid #292b2c;
   border-radius: 8px;
   transition: all 0.3s ease-in-out;
   margin-bottom: 20px;
@@ -80,7 +97,7 @@ h2 {
 
 footer {
   text-align: center;
-  background-color: black;
+  background-color: #292b2c;
   color: white;
   height: 120px;
   position: absolute;
@@ -91,12 +108,22 @@ footer {
 }
 
 @media (min-width: 768px) {
+  h1 {
+    font-size: 64px;
+  }
+  h2 {
+    font-size: 40px;
+  }
+  .btn {
+    font-size: 24px;
+  }
   .btn:hover {
     background-color: white;
-    color: black;
+    color: #292b2c;
   }
   .image-container {
-    max-width: 50%;
+    max-width: 40%;
+    margin: 0 auto;
   }
   .fact-text {
     font-size: 34px;
