--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ footer {
   font-size: 18px;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 @media (min-width: 768px) {
   h1 {
     font-size: 64px;
