--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  min-height: 100%;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -24,8 +24,7 @@ html {
   background: #555;
 }
 
-body,
-.btn {
+body, .btn {
   font-family: "Montserrat", sans-serif;
 }
 
